--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
  datasource:
    driver-class-name: org.postgresql.Driver
-   url: jdbc:postgresql://34.64.36.71:5432/postgres
+   url: jdbc:postgresql://34.64.155.49:5432/postgres
    username: postgres
-   password: 1234
+   password: moon1234
  thymeleaf:
     suffix: .html
     prefix: classpath:/templates/
